OWL-2673 Reset Password and Request Account: Fixed layout issues with the pages and made them responsive to match the New Account pages

--- a/reset-pass/account-validator-tool/src/webapp/css/newUser.css
+++ b/reset-pass/account-validator-tool/src/webapp/css/newUser.css
@@ -26,7 +26,7 @@ p, h1, form, button {
 
 /* ----------- wrapper ------------*/
 .wrapper {
-	border:2px solid #336699;
+	border:2px solid #369;
 	padding: 20px;
 	background:#fff;
 	margin: 2em auto;
